# mediapipe_ros

./: CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: create_prior_default.launch
src/: main.py  main_ros.py
