<?xml version="1.0"?>
<package format="2">
  <name>mediapipe_ros</name>
  <version>1.0.0</version>
  <description>The mediapipe_ros package</description>
  <maintainer email="hasegawa.shoichi@em.ci.ritsumei.ac.jp">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

